--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
   justify-content: space-between;
   padding: 1.2rem 8rem;
   flex-wrap: wrap;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
 }
 
 .header-left {
