--- a/style.css
+++ b/style.css
@@ -47,8 +47,18 @@ body {
 
 .logo-container {
   position: relative;
-  width: 60px;
-  height: 60px;
+  width: auto;
+  height: auto;
+  display: inline-block;
+}
+
+.logo-container .welcome-logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-width: 500px;
+  transition: opacity 1.2s ease;
 }
 
 .logo {
