--- a/style.css
+++ b/style.css
@@ -399,3 +399,14 @@ body {
   color: var(--yellow);
 }
 
+.hidden {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: opacity 1s ease, transform 1s ease;
+}
+
+.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
