--- a/style.css
+++ b/style.css
@@ -167,7 +167,6 @@ body {
 .welcome-section {
   background-color: var(--purple);
   color: white;
-  height: 85vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -199,6 +198,7 @@ body {
   display: flex;
   align-items: center;
   font-size: 1rem;
+  gap: 0.5rem;
   font-weight: 300;
   font-family: 'Segoe UI', sans-serif;
 }
