--- a/style.css
+++ b/style.css
@@ -449,15 +449,15 @@ body {
   border: none;
   padding: 14px;
   font-size: 1.1rem;
-  font-weight: 600;
+  font-weight: 500;
   border-radius: 6px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .contact-form button:hover {
-  background-color: #fff;
-  color: var(--purple);
+  background-color: transparent;
+  color: var(--yellow);
 }
 
 /* Contact Info */
