--- a/style.css
+++ b/style.css
@@ -515,8 +515,9 @@ body {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  padding: 0px 15%;
-  background-color: transparent;
+  padding: 40px 15%;
+  background-color: var(--purple);
+  transition: background-color 0.4s ease;
 }
 
 .specialize-line {
