--- a/style.css
+++ b/style.css
@@ -541,7 +541,7 @@ body {
 
 /* Text above the image */
 .contact-label-over-arrow {
-  font-family: 'Bradley Hand', cursive;
+  font-family: 'Patrick Hand', cursive;
   font-style: italic;
   font-size: 1rem;
   color: white;
