--- a/style.css
+++ b/style.css
@@ -752,7 +752,7 @@ body {
     display: grid;
     grid-template-columns: auto 1fr auto;
     align-items: center;
-    position: relative;
+    position: sticky;
   }
 
   .header-left {
@@ -784,6 +784,7 @@ body {
   .main-header {
     padding: 1rem 1.5rem;
     flex-wrap: nowrap;
+    position: sticky;
   }
 
   .header-left {
