--- a/style.css
+++ b/style.css
@@ -792,6 +792,56 @@ body {
 }
 
 /* --------------------------------------------
+            ABOUT PAGE REVIEW SECTION
+----------------------------------------------*/
+
+.testimonial-carousel {
+  background: var(--black);
+  color: white;
+  padding: 80px 15%;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+}
+
+.testimonial-title {
+  font-size: 2rem;
+  color: var(--yellow);
+  margin-bottom: 40px;
+}
+
+.testimonial-slider {
+  position: relative;
+  height: 160px;
+}
+
+.testimonial-slide {
+  opacity: 0;
+  transition: opacity 1s ease;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  margin: 0 auto;
+  max-width: 700px;
+  font-style: italic;
+  font-weight: 300;
+}
+
+.testimonial-slide span {
+  display: block;
+  margin-top: 16px;
+  font-style: normal;
+  color: var(--yellow);
+  font-weight: 500;
+}
+
+.testimonial-slide.active {
+  opacity: 1;
+  position: relative;
+}
+
+/* --------------------------------------------
            MOBILE OPTIMIZATION CODE
 ----------------------------------------------*/
 
