--- a/style.css
+++ b/style.css
@@ -798,7 +798,7 @@ body {
 .testimonial-carousel {
   background-color: var(--black);
   color: white;
-  padding: 50px 15%;
+  padding: 45px 15% 55px 15%;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -806,7 +806,7 @@ body {
 
 .testimonial-title {
   font-size: 2rem;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   color: var(--yellow);
 }
 
