--- a/style.css
+++ b/style.css
@@ -796,7 +796,7 @@ body {
 ----------------------------------------------*/
 
 .testimonial-carousel {
-  background-color: var(--black);
+  background-color: var(--purple);
   color: white;
   padding: 40px 15% 55px 15%;
   text-align: center;
